--- a/source/sass/sass-tools/_variables.scss
+++ b/source/sass/sass-tools/_variables.scss
@@ -9,6 +9,7 @@ $ultra-light: #e5e5e5;
 $light-darken: #48494d;
 $lighten-darken:#d7d9df;
 $ultra-lighten:#f8f8f8;
+$darken-semitransparence: rgba(0, 0, 0, 0.6);
 
 // Fonts
 $font-size-micro: 10px;
