--- a/source/sass/block-styles/_feedback.scss
+++ b/source/sass/block-styles/_feedback.scss
@@ -90,6 +90,10 @@
   border: none;
   box-shadow: 0 0 0 1px rgba(44, 46, 63, 0.3);
 
+  &:invalid {
+    box-shadow: 0 0 0 1px $accent-basic;
+  }
+
   @media (max-width: $breakpoint-mobile) {
     padding: 0 27px;
     width: 288px;
