--- a/source/sass/block-styles/_places.scss
+++ b/source/sass/block-styles/_places.scss
@@ -128,7 +128,7 @@
     top: 0;
     width: 350px;
     height: 430px;
-    background-color: rgba(0, 0, 0, 0.6);
+    background-color: $darken-semitransparence;
 
     @media (max-width: $breakpoint-tablet) {
       width: 288px;
