--- a/source/sass/block-styles/_prices.scss
+++ b/source/sass/block-styles/_prices.scss
@@ -62,6 +62,12 @@
 
 .prices__offer--reach-agreement {
   padding: 115px 0 0 80px;
+  border: none;
+
+  &:hover,
+  &:focus {
+    border: none;
+  }
 
   @media (max-width: $breakpoint-tablet) {
     width: 100%;
